# OldFileManager

./: import-summary.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: users.properties
app/src/main/java/com/flyzebra/customView/: AutoImageView.java
app/src/main/java/com/flyzebra/filemanager/activity/: FileCopyService.java  FileMIME.java  MainActivity.java  MainGridAdapter.java  MainListAdapter.java  MyApp.java
app/src/main/java/com/flyzebra/filemanager/customView/: AutoImageView.java
app/src/main/java/com/flyzebra/filemanager/mobilepc/: MobilePC.java
app/src/main/java/com/flyzebra/filemanager/sqlite/: DBhelper.java
app/src/main/java/com/flyzebra/filemanager/tools/: APKTools.java  BitmapTools.java  FtpTools.java  MobilePC.java
app/src/main/res/drawable-hdpi/: Thumbs.db  butbackgroud.xml  itembackgroud.xml
app/src/main/res/layout/: activity_main.xml  dlg_adddir.xml  dlg_addnet.xml  dlg_copyfile.xml  dlg_login.xml  dlg_newfile.xml  dlg_rename.xml  file_gridview.xml  file_listview.xml
app/src/main/res/values/: strings.xml
